Rework some code and bump dependencies